# contracts

./: .gitignore  Cargo.toml  PROJECT-STATUS.md  README.md  debug-transaction.md  debug-vrf-config.sh  fix-vrf-consumer.sh  foundry.toml  generate-vanity-dragon.sh  hardhat.config.ts  layerzero-omnidragon.config.ts  layerzero-oracle.config.ts  layerzero.config.ts  manual-vanity-steps.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
deploy/OmniDragonOracle/oracle-vanity-generator/: Cargo.toml  oracle-vanity-result-20250820-054152.json  oracle-vanity-result-20250820-054603.json  oracle-vanity-result-20250820-071332.json  oracle-vanity-result-20250820-072904.json  oracle-vanity-result-20250820-073631.json  oracle-vanity-result-20250820-090457.json  oracle-vanity-result-20250820-090529.json  oracle-vanity-result-20250820-090950.json  oracle-vanity-result-20250820-095253.json  oracle-vanity-result-20250820-100121.json  oracle-vanity-result-20250820-103552.json  oracle-vanity-result-20250820-105536.json  oracle-vanity-result-20250820-105756.json  oracle-vanity-result-20250820-111413.json  oracle-vanity-result-20250820-113904.json  oracle-vanity-result-20250820-115356.json  oracle-vanity-result-20250820-120543.json  oracle-vanity-result-20250820-122046.json  oracle-vanity-result-20250820-133336.json  oracle-vanity-result-20250820-144055.json  oracle-vanity-result-20250820-144334.json  oracle-vanity-result-20250821-151418.json  oracle-vanity-result-20250822-010933.json  (+55 more)
docs/: README.md  (+5 more)
vanity-generator/: Cargo.toml  README.md
vanity-generator/src/: main.rs
(+211 files in other folders)
