[package]
name = "dragon-vanity-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_dragon_vanity"
path = "src/main.rs"

[dependencies]
ethers = "2.0"
hex = "0.4"
sha3 = "0.10"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
indicatif = "0.17"
num_cpus = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
