[package]
name = "oracle-vanity-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha3 = "0.10.8"
